# newsletter

./: Cargo.toml  DockerFile
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  starup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
