[package]
name = "news_latter"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio",
  "tls-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
actix-web = "4.9.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
env_logger = "0.11.5"
log = "0.4.22"
tracing = { version = "0.1.40", features = ["log"] }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_subscriber"
