[package]
name = "news_latter"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8.2", default-features = false, features = [
  "runtime-tokio",
  "tls-native-tls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
actix-web = "4.9.0"
reqwest = "0.12.8"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
config = "0.14.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "email_subscriber"
